Adds Font Awesome.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   <div class="container">
-    <h1>Tonya's Awesome Website</h1>
+    <h1 class="fa-spin">Tonya's Awesome Website</h1>
   </div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
